# Guitar-Multi-Effects-Pedal

./: .cproject  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  Guitar-Multi-Effects-Pedal Debug.launch  Guitar-Multi-Effects-Pedal.ioc  Guitar_Effects_Pedal Debug.launch  Guitar_Effects_Pedal.ioc  Guitar_Pedal.ioc  build.ninja  cmake_install.cmake  stm32f746nghx_FLASH.ld
BlankUI/Drivers/BSP/STM32746G-Discovery/: stm32746g_discovery.h
BlankUI/STM32CubeIDE/: .cproject  .project
BlankUI/TouchGFX/: BlankUI.touchgfx
BlankUI/TouchGFX/simulator/msvs/: Application.vcxproj.filters
Core/Inc/: audio_processing.h  display_init.h  guitar_audio_init.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Core/Inc/Backup/: audio_buffers.h.bak  guitar_audio_init.h.bak  main.h.bak  stm32f7xx_hal_conf.h.bak  stm32f7xx_it.h.bak
Core/Src/: audio_processing.c  display_init.c  guitar_audio_init.c  main.c  stm32746g_discovery_lcd.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
Core/Src/Backup/: guitar_audio_init.c.bak  main.c.bak  stm32f7xx_hal_msp.c.bak
Debug/: Guitar-Multi-Effects-Pedal.elf  Guitar-Multi-Effects-Pedal.list  Guitar-Multi-Effects-Pedal.map  Guitar_Pedal.elf  Guitar_Pedal.list  Guitar_Pedal.map  makefile  objects.list  sources.mk
Debug/Core/Src/: audio_processing.cyclo  audio_processing.d  audio_processing.su  display_init.cyclo  display_init.d  display_init.su  guitar_audio_init.cyclo  guitar_audio_init.d  guitar_audio_init.su  main.cyclo  main.d  main.su  stm32f7xx_hal_msp.cyclo  stm32f7xx_hal_msp.d  stm32f7xx_hal_msp.su  stm32f7xx_it.cyclo  stm32f7xx_it.d  stm32f7xx_it.su  subdir.mk  system_stm32f7xx.d
Debug/Drivers/: stm32f7xx_hal_uart.d  subdir.mk
Debug/Drivers/BSP/Components/: .gitignore
Debug/Drivers/BSP/Components/ft5336/: subdir.mk
Debug/Drivers/BSP/Components/ov9655/: ov9655.d  subdir.mk
Debug/Drivers/BSP/Components/wm8994/: subdir.mk
Debug/Drivers/BSP/Src/: stm32746g_discovery.cyclo  stm32746g_discovery.d  stm32746g_discovery.su  stm32746g_discovery_audio.cyclo  stm32746g_discovery_audio.d  stm32746g_discovery_audio.su  stm32746g_discovery_lcd.cyclo  stm32746g_discovery_lcd.d  stm32746g_discovery_lcd.su  stm32746g_discovery_sdram.cyclo  stm32746g_discovery_sdram.d  stm32746g_discovery_sdram.su  subdir.mk
Debug/Drivers/STM32F7xx_HAL_Driver/: subdir.mk
Debug/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal.d  stm32f7xx_hal_cortex.d  stm32f7xx_hal_crc.d  stm32f7xx_hal_crc_ex.d  stm32f7xx_hal_dma.d  stm32f7xx_hal_dma2d.d  stm32f7xx_hal_dma_ex.d  stm32f7xx_hal_dsi.d  stm32f7xx_hal_exti.d  stm32f7xx_hal_flash.d  stm32f7xx_hal_flash_ex.d  stm32f7xx_hal_gpio.d  stm32f7xx_hal_i2c.d  stm32f7xx_hal_i2c_ex.d  stm32f7xx_hal_i2s.d  stm32f7xx_hal_ltdc.d  stm32f7xx_hal_ltdc_ex.d  stm32f7xx_hal_pwr.d  stm32f7xx_hal_pwr_ex.d  stm32f7xx_hal_rcc.d  stm32f7xx_hal_rcc_ex.d  stm32f7xx_hal_sai.d  stm32f7xx_hal_sai_ex.d  stm32f7xx_hal_sdram.d  stm32f7xx_hal_spi.d  stm32f7xx_hal_spi_ex.d  stm32f7xx_hal_tim.d  stm32f7xx_hal_tim_ex.d  stm32f7xx_hal_uart.d  stm32f7xx_hal_uart_ex.d  stm32f7xx_ll_fmc.d  subdir.mk
Debug/myDrivers/Src/: ft5336.cyclo  ft5336.d  ft5336.su  ov9655.cyclo  ov9655.d  ov9655.su  stm32746g_discovery.cyclo  stm32746g_discovery.d  stm32746g_discovery.su  stm32746g_discovery_audio.cyclo  stm32746g_discovery_audio.d  stm32746g_discovery_audio.su  stm32746g_discovery_camera.cyclo  stm32746g_discovery_camera.d  stm32746g_discovery_camera.su  stm32746g_discovery_eeprom.cyclo  stm32746g_discovery_eeprom.d  stm32746g_discovery_eeprom.su  stm32746g_discovery_lcd.cyclo  stm32746g_discovery_lcd.d  stm32746g_discovery_lcd.su  stm32746g_discovery_qspi.cyclo  stm32746g_discovery_qspi.d  stm32746g_discovery_qspi.su  stm32746g_discovery_sd.cyclo  stm32746g_discovery_sd.d  stm32746g_discovery_sd.su  stm32746g_discovery_sdram.cyclo  stm32746g_discovery_sdram.d  stm32746g_discovery_sdram.su  stm32746g_discovery_ts.cyclo  stm32746g_discovery_ts.d  stm32746g_discovery_ts.su  stm32f7xx_hal.cyclo  stm32f7xx_hal.d  stm32f7xx_hal.su  stm32f7xx_hal_adc.d  stm32f7xx_hal_adc_ex.d  stm32f7xx_hal_can.d  stm32f7xx_hal_cec.d  (+132 more)
Debug/myUtilities/Fonts/: subdir.mk
Drivers/BSP/Components/wm8994/: wm8994.h
Drivers/BSP/Inc/: stm32746g_discovery.h  stm32746g_discovery_audio.h  stm32746g_discovery_lcd.h  stm32746g_discovery_sdram.h
Drivers/BSP/Src/: stm32746g_discovery.c  stm32746g_discovery_audio.c  stm32746g_discovery_lcd.c  stm32746g_discovery_sdram.c
Drivers/CMSIS/Include/: stm32f7xx.h
Drivers/GUI/: prototypes.h
Drivers/Inc/: stm32746g_discovery_audio.h  stm32f7xx_it.h
Drivers/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal.h  stm32f7xx_hal_def.h
Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal.c  stm32f7xx_hal_sai.c  stm32f7xx_hal_uart.c
Drivers/Src/: stm32746g_discovery_audio.c  stm32746g_discovery_lcd.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  wm8994.c
Inc/: audio_init.h  display_init.h  gui.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  ui_interface.h
Src/: audio_init.c  display_init.c  main.c  stm32f7xx_it.c  ui_interface.c
Startup/: startup_stm32f746nghx.s
USB_HOST/App/: usb_host.h
myDrivers/Inc/: stm32746g_discovery_audio.h  stm32746g_discovery_camera.h  stm32746g_discovery_lcd.h  stm32746g_discovery_qspi.h  stm32746g_discovery_sd.h  wm8994.h
myDrivers/Src/: stm32746g_discovery_lcd.c  stm32746g_discovery_qspi.c  stm32746g_discovery_sd.c  stm32f7xx_hal_sai.c  wm8994.c
